recursion.cons.nfirst.Nfirst.scala.error
Compilation error:
Nfirst:6: error: type mismatch;
 found   : Int
 required: List[Int]
    return l.head;
             ^